# tento-server

./: .gitignore  Cargo.toml  README.md
docs/: architecture.md  overview.md
docs/schema/: structured-quiz-output.json
scripts/: test_refresh_token.sh
src/: app_state.rs  config.rs  errors.rs  lib.rs  main.rs  middleware.rs  test_utils.rs
src/auth/: claims.rs  jwt.rs  middleware.rs  mod.rs  utils.rs
src/constants/: mod.rs  prompts.rs  quiz_prompt.rs
src/db/: mod.rs  mongo.rs
src/graphql/: helpers.rs  mod.rs  schema.rs
src/graphql/schema_impl/: mod.rs  mutations.rs  queries.rs
src/handlers/: auth_handler.rs  mod.rs  quiz_handler.rs  user_handler.rs
src/models/: user_model.rs
src/models/domain/: mod.rs  quiz.rs  quiz_attempt.rs  quiz_question.rs  refresh_token.rs  summary_document.rs  user.rs
src/models/dto/: mod.rs  quiz_dto.rs  request.rs  response.rs
src/repositories/: agent_job_repository.rs  mod.rs  quiz_attempt_repository.rs  quiz_repository.rs  refresh_token_repository.rs  summary_document_repository.rs  summary_document_respository.rs  user_repository.rs
src/services/: agent_orchestrator_service.rs  db_helpers.rs  http_helpers.rs  mod.rs  model_service.rs  quiz_attempt_service.rs  quiz_service.rs  step_executor.rs  summary_document_service.rs  user.rs  user_service.rs
src/services/orchestrator_steps/: mod.rs  quiz_steps.rs
tests/: integration_tests.rs  repository_contract_tests.rs
