[package]
name = "tento-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-web-httpauth = "0.8"
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-actix-web = "7.0"
async-openai = "0.32.4"
async-trait = "0.1"
bson = "3.1.0"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
jsonwebtoken = "9"
log = "0.4"
mongodb = "3.5.1"
octocrab = "0.49.5"
once_cell = "1.20"
openai-func-enums = "0.4.0"
regex = "1.10"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
uuid = "1.20.0"
validator = { version = "0.19", features = ["derive"] }

[dev-dependencies]
actix-rt = "2.10"
mockall = "0.13"
